@startuml

title US130 - As an Administrator, I want to create a energy grid.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
  FontSize 12
}


class EnergyGridSettingsWebController
class EnergyGridRepository
class EnergyGridMapper
class EnergyGrid
class EnergyGridDTO


EnergyGridSettingsWebController -- EnergyGridRepository : >
EnergyGridRepository -- EnergyGridMapper : >
EnergyGridRepository -- EnergyGrid : >
EnergyGridRepository -- EnergyGridDTO : >

class EnergyGridSettingsWebController{
createEnergyGrid(@RequestBody EnergyGridDTO)
}

class EnergyGridRepository{
createEnergyGrid(@RequestBody EnergyGridDTO)
}

class EnergyGridMapper{
dtoToObjectEmptyLists\n(EnergyGridDTO energyGridDTO))
}

class EnergyGridDTO{
getHouseID()
getMaxContractedPower()
getName()
}

@enduml